k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web-app-svc
spec:
  selector:
    app: go-web-app
    ports:
     - protocol: TCP
       port: 80
       targetPort: 8080
    type: clusterIP
